--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -286,6 +286,44 @@
 
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginLeft="15dp">
+
+
+
+                        <TextView
+                            android:id="@+id/languageAppTxt"
+                            android:layout_width="250dp"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:text="@string/language"
+                            android:textColor="@color/black"
+                            android:textSize="17dp"
+                            android:textStyle="bold"
+                            android:typeface="monospace">
+
+                        </TextView>
+                        <Spinner
+                            android:id="@+id/spinnerLanguageApp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginTop="10dp"
+
+                            android:background="@android:drawable/btn_dropdown"
+                            android:backgroundTint="@color/greenTime"
+                            android:backgroundTintMode="multiply"
+                            android:popupBackground="@color/greenTime"
+                            android:spinnerMode="dropdown"
+                            android:textAlignment="center"
+                            android:theme="@style/spinnerTheme" />
+
+
+
+                    </LinearLayout>
+
 
 
 
