--- a/app/src/main/res/layout/activity_create_custom_commands.xml
+++ b/app/src/main/res/layout/activity_create_custom_commands.xml
@@ -89,10 +89,11 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/txtOption"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:text="Lane"
+                        android:layout_marginLeft="15dp"
+                        android:text="@string/command"
                         android:textColor="@color/black"
                         android:textSize="20dp"
                         android:textStyle="bold">
@@ -107,7 +108,7 @@
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:id="@+id/createCustomLane"
+                            android:id="@+id/customOption"
                             android:layout_width="80dp"
                             android:layout_height="75dp"
                             android:src="@drawable/top">
@@ -121,56 +122,6 @@
                             android:layout_marginLeft="15dp"
                             android:layout_marginTop="10dp"
 
-                            android:background="@android:drawable/btn_dropdown"
-                            android:backgroundTint="@color/greenTime"
-                            android:backgroundTintMode="multiply"
-                            android:popupBackground="@color/greenTime"
-                            android:spinnerMode="dropdown"
-                            android:textAlignment="center"
-                            android:theme="@style/spinnerTheme" />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="1dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginBottom="5dp"
-                        android:text="Spell"
-                        android:textColor="@color/black"
-                        android:textSize="20dp"
-                        android:textStyle="bold">
-
-                    </TextView>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="75dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:id="@+id/createCustomSpell"
-                            android:layout_width="75dp"
-                            android:layout_height="65dp"
-                            android:layout_gravity="center_vertical"
-                            android:src="@drawable/flash">
-
-                        </ImageView>
-
-                        <Spinner
-                            android:id="@+id/spinnerSpell"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginLeft="15dp"
-                            android:layout_marginTop="10dp"
                             android:background="@android:drawable/btn_dropdown"
                             android:backgroundTint="@color/greenTime"
                             android:backgroundTintMode="multiply"
