--- a/app/src/main/res/layout/activity_commands.xml
+++ b/app/src/main/res/layout/activity_commands.xml
@@ -761,6 +761,68 @@
                         <androidx.cardview.widget.CardView
                             android:layout_width="45dp"
                             android:layout_height="45dp"
+                            android:background="@color/white"
+                            >
+
+                            <ImageView
+                                android:layout_width="45dp"
+                                android:layout_height="45dp"
+                                android:background="@color/white"
+                                android:src="@drawable/cosmic_insight"></ImageView>
+                        </androidx.cardview.widget.CardView>
+
+                        <TextView
+                            android:id="@+id/txtRune"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="5dp"
+                            android:gravity="center_vertical"
+                            android:text="@string/rune"
+                            android:textColor="@color/black"
+                            android:textSize="17dp"
+                            android:textStyle="bold"
+                            android:typeface="monospace">
+
+                        </TextView>
+                    </LinearLayout>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center_vertical"
+                        android:text="@string/explanation_rune"
+                        android:textColor="@color/black"
+                        android:textSize="17dp"
+                        android:textStyle="bold"
+                        android:typeface="monospace">
+
+                    </TextView>
+
+                    <TextView
+                        android:id="@+id/activateExampleRune"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:textColor="@color/black"
+                        android:textSize="17dp"
+                        android:textStyle="bold"
+                        android:typeface="monospace">
+
+                    </TextView>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="10dp">
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="45dp"
+                            android:layout_height="45dp"
                             app:cardCornerRadius="5dp"
                             app:cardElevation="10dp">
 
