--- a/app/src/main/res/layout/activity_create_custom_commands.xml
+++ b/app/src/main/res/layout/activity_create_custom_commands.xml
@@ -92,6 +92,7 @@
                         android:id="@+id/txtOption"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
                         android:layout_marginLeft="15dp"
                         android:text="@string/command"
                         android:textColor="@color/black"
